# DSc-Dissertation

./: README.md
analysis/: result_analysis.R
analysis/data/: results.csv
analysis/figures/: bars-stats-large.eps  bars-stats-overall.eps  bars-stats-small.eps  boxplot-mean-objective-large.eps  boxplot-mean-objective-small.eps  boxplot-mean-runtime-large.eps  boxplot-mean-runtime-small.eps
experiments/: run.py
instances/scripts/: benchmark.py  scheduling_generator.py
source/: CMakeLists.txt
source/src/: main.cpp
source/src/algorithm/: algorithm.h
source/src/algorithm/heuristic/: greedy.cpp  greedy.h  ils.cpp  ils.h  neh.cpp  neh.h
source/src/algorithm/mip/: mip_arc_time_indexed.cpp  mip_arc_time_indexed.h  mip_linear_ordering.cpp  mip_linear_ordering.h  mip_precedence.cpp  mip_precedence.h
source/src/neighborhood/: direct_swap.cpp  direct_swap.h  exchange.cpp  exchange.h  neighborhood.h  reassignment.cpp  reassignment.h  shift.cpp  shift.h  swap.cpp  swap.h
source/src/problem/: problem.cpp  problem.h
source/src/util/: common.cpp  common.h  local_search.cpp  local_search.h
